--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage":"https://yourusername.github.io/repository-name",
   "name": "tiendaonline-app",
   "version": "0.1.0",
   "private": true,
